# tennyson.py

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py  setup.py.old  shell.nix  test.sh
tennyson/: __init__.py  cli.py  commons.py  config.py  password.py  printing.py  safty.py  vault.py  viz.py
tennyson/tests/: test.py
tests/: test.py
